refactor(concurrent): 线程资源统合——共享帧内工作池 + B/C 类虚拟线程化
- 新增 sso-core common/concurrent/SharedFrameWorkers：帧内屏障 CPU 密集任务
  共享单例池（JCTools MPSC，stripeKey 语义不变），统一属性
  ssoptimizer.workers.threads（默认 max(cores-1,1)）
- 新增 sso-core common/concurrent/VtWorkers：虚拟线程门面，仅供 IO 阻塞/
  一次性批任务
- A 类迁移：sso-ai ParallelAiDispatcher 与 sso-core MarketAdvanceParallelDispatcher
  删自建池改共享实例；两域开关（ai.parallel / econ.advance.parallel）独立语义
  不变；isWorkerThread 守卫委托共享池（AI 关闭而 Econ 开启时仍正确识别）；
  移除旧属性 ai.parallel.threads / econ.advance.parallel.threads
- B 类虚拟线程化：声音预读、ResourceIndex 预取、QueuedXmlStreamWriter
  （join-on-close/awaitBarrier 语义保留）
- C 类虚拟线程化：SpecLoadScheduler / SpecStoreMixin loadVariants /
  JaninoScriptCompilerCoordinator / ShipWeaponAtlas.decodeAll 删除现建现拆池，
  TtfGlyphProvider 预热裸线程改虚拟线程；保护真实资源瓶颈的四处保留
  Semaphore 并发闸门（声音/加载/脚本编译/图集解码），仅约束平台线程数的
  ResourceIndex 池限制移除
- 有意保留并标注：TexCompress（MIN_PRIORITY+让步）、渲染线程（GL 亲和）、
  ParallelImagePreloadCoordinator、shutdown hooks
- 顺带消除 JaninoScriptCompilerCoordinator 两处空 catch（改记 debug）

验证：sso-app 全量 1378 tests 全绿；smoke PASS；实机日志确认
SSOptimizer-AI/Econ-Worker 零残留